fixed list view spacing

--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ html, body
 {
     position: absolute;
     width: 100%;
-    height: calc(100% - 10em);
+    height: calc(100% - 5em);
 
     top: 5.5em;
     padding: 5px 0% 5px 2.5%;
@@ -335,7 +335,7 @@ a .clubs-list-item:hover
 {
     position: absolute;
     width: 100%;
-    height: calc(100% - 5em);
+    height: 100%;
 
     padding: 5px 0% 5px 2.5%;
 
